# dist/swagger.json
@@ -64,6 +64,47 @@
                 "type": "object",
                 "additionalProperties": false
             },
+            "Pick_ICreateUser.name_": {
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "name"
+                ],
+                "type": "object",
+                "description": "From T, pick a set of properties whose keys are in the union K"
+            },
+            "UserResDTO": {
+                "allOf": [
+                    {
+                        "$ref": "#/components/schemas/Pick_ICreateUser.name_"
+                    },
+                    {
+                        "properties": {
+                            "_id": {
+                                "type": "string"
+                            }
+                        },
+                        "required": [
+                            "_id"
+                        ],
+                        "type": "object"
+                    },
+                    {
+                        "properties": {
+                            "token": {
+                                "type": "string"
+                            }
+                        },
+                        "required": [
+                            "token"
+                        ],
+                        "type": "object"
+                    }
+                ]
+            },
             "Pick_ICreateAdmin.username-or-password_": {
                 "properties": {
                     "username": {
@@ -130,36 +171,6 @@
             "IEmailVerify": {
                 "$ref": "#/components/schemas/Pick_ICreateUser.email_"
             },
-            "Pick_ICreateUser.name_": {
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "name"
-                ],
-                "type": "object",
-                "description": "From T, pick a set of properties whose keys are in the union K"
-            },
-            "UserResDTO": {
-                "allOf": [
-                    {
-                        "$ref": "#/components/schemas/Pick_ICreateUser.name_"
-                    },
-                    {
-                        "properties": {
-                            "_id": {
-                                "type": "string"
-                            }
-                        },
-                        "required": [
-                            "_id"
-                        ],
-                        "type": "object"
-                    }
-                ]
-            },
             "ICreateUser": {
                 "properties": {
                     "name": {
@@ -206,6 +217,9 @@
             },
             "IUserInfo": {
                 "properties": {
+                    "_id": {
+                        "type": "string"
+                    },
                     "name": {
                         "type": "string"
                     },
@@ -217,13 +231,18 @@
                     },
                     "address": {
                         "type": "string"
+                    },
+                    "active": {
+                        "type": "boolean"
                     }
                 },
                 "required": [
+                    "_id",
                     "name",
                     "email",
                     "phone",
-                    "address"
+                    "address",
+                    "active"
                 ],
                 "type": "object",
                 "additionalProperties": false
@@ -353,7 +372,7 @@
                                         {
                                             "properties": {
                                                 "data": {
-                                                    "type": "string"
+                                                    "$ref": "#/components/schemas/UserResDTO"
                                                 },
                                                 "message": {
                                                     "type": "string"
@@ -535,6 +554,34 @@
                 }
             }
         },
+        "/payments/get-client-id": {
+            "get": {
+                "operationId": "GetClientID",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Payments"
+                ],
+                "security": [
+                    {
+                        "jwt": [
+                            "user"
+                        ]
+                    }
+                ],
+                "parameters": []
+            }
+        },
         "/users": {
             "post": {
                 "operationId": "CreateUser",
@@ -582,9 +629,43 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/users/sign-jwt-token": {
+            "post": {
+                "operationId": "SignJwtToken",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Users"
+                ],
+                "security": [],
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ISignJWT"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/get-user": {
             "get": {
-                "operationId": "GetUser",
+                "operationId": "FindUserById",
                 "responses": {
                     "200": {
                         "description": "Ok",
@@ -627,41 +708,9 @@
                 "parameters": []
             }
         },
-        "/users/sign-jwt-token": {
-            "post": {
-                "operationId": "SignJwtToken",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "Users"
-                ],
-                "security": [],
-                "parameters": [],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/ISignJWT"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{userId}": {
+        "/users/find-user-by-phone": {
             "get": {
-                "operationId": "FindUserById",
+                "operationId": "GetUserByPhone",
                 "responses": {
                     "200": {
                         "description": "Ok",
@@ -673,7 +722,7 @@
                                         {
                                             "properties": {
                                                 "data": {
-                                                    "$ref": "#/components/schemas/UserResDTO"
+                                                    "$ref": "#/components/schemas/IUserInfo"
                                                 },
                                                 "message": {
                                                     "type": "string"
@@ -694,17 +743,125 @@
                 "tags": [
                     "Users"
                 ],
-                "security": [],
+                "security": [
+                    {
+                        "jwt": [
+                            "admin"
+                        ]
+                    }
+                ],
                 "parameters": [
                     {
-                        "in": "path",
-                        "name": "userId",
+                        "in": "query",
+                        "name": "phone",
                         "required": true,
                         "schema": {
                             "type": "string"
                         }
                     }
                 ]
+            }
+        },
+        "/users/{id}": {
+            "put": {
+                "operationId": "ActiveUser",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "anyOf": [
+                                        {},
+                                        {
+                                            "properties": {
+                                                "data": {
+                                                    "type": "boolean"
+                                                },
+                                                "message": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "required": [
+                                                "data",
+                                                "message"
+                                            ],
+                                            "type": "object"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Users"
+                ],
+                "security": [
+                    {
+                        "jwt": [
+                            "admin"
+                        ]
+                    }
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ]
+            }
+        },
+        "/users/get-all-user": {
+            "get": {
+                "operationId": "GetAllUser",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "anyOf": [
+                                        {},
+                                        {
+                                            "properties": {
+                                                "data": {
+                                                    "items": {
+                                                        "$ref": "#/components/schemas/IUserInfo"
+                                                    },
+                                                    "type": "array"
+                                                },
+                                                "message": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "required": [
+                                                "data",
+                                                "message"
+                                            ],
+                                            "type": "object"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Users"
+                ],
+                "security": [
+                    {
+                        "jwt": [
+                            "admin"
+                        ]
+                    }
+                ],
+                "parameters": []
             }
         }
     },
